# wyron-public

./: README.md
golang-client/: go.mod  wyron.go
golang-client/grpc/: auth.go  client.go  servers.go  types.go  users.go
golang-client/grpc/proto/: auth.pb.go  auth_grpc.pb.go  server.pb.go  server_grpc.pb.go  user.pb.go  user_grpc.pb.go
golang-client/rest/: auth.go  client.go  servers.go  types.go  users.go
grpc-api/: auth.proto  generate-protos.txt  server.proto  user.proto
install/: README.md
install-script/: README.md  install.sh
python-client/: README.md  pyproject.toml
python-client/wyron_client/: __init__.py  client.py
python-client/wyron_client/wyron_proto/: auth_pb2.py  auth_pb2_grpc.py  server_pb2.py  server_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
rest-api/: README.MD  README.md  swagger.json  swagger.yaml
