[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wyron-client"
version = "0.6.0"
description = "Python SDK for Wyron Panel"
authors = [{name="Wyron"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.24.0",
    "grpcio>=1.50.0",
    "protobuf>=4.21.0",
    "pyqrcode>=1.2.1"
]
